Fix GitHub Pages configuration and routing
- Add .nojekyll file to disable Jekyll processing completely
- Update _config.yml to exclude unnecessary files
- Fix base href in index.html for GitHub Pages routing
- Ensure Angular app loads properly on GitHub Pages

--- a/_config.yml
+++ b/_config.yml
@@ -20,11 +20,20 @@ exclude:
   - dist/
   - .angular/
   - .vscode/
-  - "*.md"
+  - "*.md" 
   - "*.json"
   - "*.ts"
-  - "*.js"
-  - "*.css"
   - create-standalone.sh
   - test-simple.html
+  - debug-test.html
+  - angular-test.html
   - real-timeDisplay/
+  - deployment/
+
+# Include important files
+include:
+  - index.html
+  - complete-standalone.html
+
+# Disable Jekyll processing for standalone files
+plugins: []
