--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+  "build": "ng build",
+  "build:ghpages": "ng build --configuration production --base-href /real-timeDisplay/ --deploy-url /real-timeDisplay/",
     "watch": "ng build --watch --configuration development"
   },
   "prettier": {
